@@ -16,44 +16,105 @@
 
 package com.jayway.restassured.internal
 
+import com.jayway.restassured.assertion.CookieMatcher
 import com.jayway.restassured.response.Response
+import com.jayway.restassured.response.ResponseBody
+import static com.jayway.restassured.assertion.AssertParameter.notNull
 
 class RestAssuredResponseImpl implements Response {
   private static final String CANNOT_PARSE_MSG = "You cannot use REST Assured expectations and return the response at the same time."
-  def resp
+  def responseHeaders = [:]
+  def cookies = [:]
+  def content
 
-  public void parseResponse(httpResponse) {
+  public void parseResponse(httpResponse, content) {
+    parseHeaders(httpResponse)
+    parseCookies()
+    parseContent(content)
+  }
+
+  def parseCookies() {
+    if(headers.containsKey("Set-Cookie")) {
+      cookies = CookieMatcher.getCookieMap(headers.get("Set-Cookie"))
+    }
+  }
+
+  def parseHeaders(httpResponse) {
+    httpResponse.headers.each {
+      responseHeaders.put(it.getName(), it.getValue())
+    }
+  }
+
+  private def parseContent(content) {
     try {
-      if(httpResponse instanceof InputStream) {
-        resp = convertToByteArray(httpResponse)
+      if (content instanceof InputStream) {
+        this.content = convertToByteArray(content)
       } else {
-        resp = convertToString(httpResponse)
+        this.content = convertToString(content)
       }
-    } catch(IllegalStateException e) {
+    } catch (IllegalStateException e) {
       throw new IllegalStateException(CANNOT_PARSE_MSG, e)
     }
   }
 
   String asString() {
-    assertNotNull resp
-    return resp instanceof String ? resp : new String(resp)
+    assertNotNull content
+    return content instanceof String ? content : new String(content)
   }
 
   byte[] asByteArray() {
-    assertNotNull resp
-    return resp instanceof byte[] ? resp : resp.getBytes()
+    assertNotNull content
+    return content instanceof byte[] ? content : content.getBytes()
   }
 
   Response andReturn() {
     return this
   }
 
-  Response body() {
+  ResponseBody body() {
     return this
   }
 
   Response thenReturn() {
     return this
+  }
+
+  ResponseBody getBody() {
+    return body()
+  }
+
+  Map<String, String> headers() {
+    return Collections.unmodifiableMap(responseHeaders)
+  }
+
+  Map<String, String> getHeaders() {
+    return headers()
+  }
+
+  String header(String name) {
+    notNull(name, "name")
+    return responseHeaders.get(name)
+  }
+
+  String getHeader(String name) {
+    return header(name)
+  }
+
+  Map<String, String> cookies() {
+    return Collections.unmodifiableMap(cookies)
+  }
+
+  Map<String, String> getCookies() {
+    return cookies()
+  }
+
+  String cookie(String name) {
+    notNull(name, "name")
+    return cookies.get(name)
+  }
+
+  String getCookie(String name) {
+    return cookie(name)
   }
 
   private convertToByteArray(InputStream stream) {
@@ -91,9 +152,5 @@ class RestAssuredResponseImpl implements Response {
     if(!resp) {
       throw new IllegalStateException(CANNOT_PARSE_MSG)
     }
-  }
-
-  private def throwException() {
-
   }
 }
